--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -3,22 +3,25 @@
 name="Web"
 platform="Web"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../web_export/index.html"
+export_path="../web/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
+variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
@@ -27,11 +30,12 @@ html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
+progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/icon_144x144="res://images/clown-fish.png"
+progressive_web_app/icon_180x180="res://images/clown-fish.png"
+progressive_web_app/icon_512x512="res://images/clown-fish.png"
+progressive_web_app/background_color=Color(0.454902, 0.72549, 1, 1)
